RESOLVED FIXED 42282
Fix enum value names for Navigation.{idl|h}
https://bugs.webkit.org/show_bug.cgi?id=42282
Summary Fix enum value names for Navigation.{idl|h}
Tony Gentilcore
Reported 2010-07-14 13:17:29 PDT
Fix enum value names for Navigation.{idl|h}
Attachments
Patch (2.37 KB, patch)
2010-07-14 13:20 PDT, Tony Gentilcore
darin: review+
Tony Gentilcore
Comment 1 2010-07-14 13:20:45 PDT
Darin Adler
Comment 2 2010-07-14 13:42:28 PDT
Comment on attachment 61555 [details] Patch > + enum NavigationType { > + NAVIGATE = 0, > + RELOAD = 1, > + BACK_FORWARD = 2, > + }; I don’t think it’s important to have those "= 0", "= 1", "= 2" there. I’m surprised this patch doesn’t remove DontCheckEnum from the IDL file.
Tony Gentilcore
Comment 3 2010-07-14 13:50:09 PDT
(In reply to comment #2) > (From update of attachment 61555 [details]) > > + enum NavigationType { > > + NAVIGATE = 0, > > + RELOAD = 1, > > + BACK_FORWARD = 2, > > + }; > > I don’t think it’s important to have those "= 0", "= 1", "= 2" there. Okay, I'll pull them. > > I’m surprised this patch doesn’t remove DontCheckEnum from the IDL file. DontCheckEnum was not added to this IDL file because it is guarded by ENABLE(WEB_TIMING), which is currently off by default. I got the compile error as soon as I enabled it locally.
Tony Gentilcore
Comment 4 2010-07-14 14:40:30 PDT
Note You need to log in before you can comment on or make changes to this bug.