2010-07-14  Tony Gentilcore  <tonyg@chromium.org>

Reviewed by Darin Adler.

        Fix enum value names for Navigation.{idl|h}
        https://bugs.webkit.org/show_bug.cgi?id=42282

        This is necessary after https://bugs.webkit.org/show_bug.cgi?id=42250.

        No new tests because no new functionality.

        * page/Navigation.cpp:
        (WebCore::Navigation::type):
        * page/Navigation.h:
        (WebCore::Navigation::):

Canonical link: https://commits.webkit.org/54205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63356 268f45cc-cd09-0410-ab3c-d52691b4dbfc