WebCore/page/Navigation.h
@@ -47,17 +47,16 @@ public:
     Frame* frame() const;
     void disconnectFrame();
 
+    enum NavigationType {
+        NAVIGATE,
+        RELOAD,
+        BACK_FORWARD
+    };
+
     unsigned short type() const;
     unsigned short redirectCount() const;
 
 private:
-    // Keep in sync with what's in the .idl file.
-    enum NavigationType {
-        Navigate = 0,
-        Reload = 1,
-        BackForward = 2,
-    };
-
     Navigation(Frame*);
 
     Frame* m_frame;
